Simplify styles for projects on the home page.

--- a/css/banner-type.css
+++ b/css/banner-type.css
@@ -2,36 +2,39 @@
 
   /* =Type
   ----------------------------------------------- */
-  .banner h1,
-  .banner h2,
-  .banner h3 {
-    margin-top: 0;
+  .banner__title,
+  .banner__with,
+  .banner__next-project {
+    text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.375);
+    padding: 0.7rem 1.4rem;
   }
-
-  .banner h1,
-  .banner h3 {
+  .banner__title,
+  .banner__next-project {
+    margin-top: 0;
+    text-transform: inherit;
+    font-variant: inherit;
     font-size: 1.75em;
   }
+  .banner__with {
+    margin-top: 0;
+    position: relative;
+    top: -1px;
+  }
 
-  /* SHIM: Make the project details page banner type larger on medium size screens */
-  /*
   @media (min-width: 22em) {
-    .ahoy + .banner h1 {
+    .banner__title {
       font-size: 3em;
     }
   }
-  */
 
   @media (min-width: 45em) {
-    .banner h1,
-    .banner h3 {
+    .banner__title {
       font-size: 5vmax;
     }
   }
 
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .banner h3,
-    .banner_next h1 {
+    a .banner__title {
       /* --wave-outline-light-blue */
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
       background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
@@ -42,14 +45,12 @@
 
       padding: 0 0.35em 0.35em;
     }
-    .banner h3 + p,
-    .banner_next .banner__with {
+    a .banner__with {
       margin-top: 0;
       padding: 0.35em 0.7em 0;
     }
     @media (min-width: 45em) {
-      .banner h3 + p,
-      .banner_next .banner__with {
+      a .banner__with {
         padding: 0.35em 1.4vmax 0; /* 4vmax * 0.35 */
       }
     }
@@ -65,37 +66,8 @@
     background-color: rgb(40, 155, 215);
   }
 
-  .banner h3,
-  .banner_next h1 {
-    text-transform: none;
-    font-variant: normal;
-  }
-  @media (min-width: 45em) {
-    .banner h3,
-    .banner_next h1 {
-      font-size: 4vmax;
-    }
-  }
-
-  .banner h1,
-  .banner h2,
-  .banner h3,
-  .banner p {
-    text-shadow: 0 0 0.25em rgba(0, 0, 0, 0.375);
-    background-color: transparent;
-    padding: 0.7rem 1.4rem;
-  }
-  .banner p {
-    position: relative;
-    margin-top: 0;
-    top: -1px;
-    background-color: transparent;
-    color: white;
-  }
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .banner h1,
-    .banner h2,
-    .banner h3 {
+    .banner__title {
       /* --wave-outline-light-blue */
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
       background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
@@ -109,11 +81,10 @@
 
   /* =Banner (Project Details)
   ----------------------------------------------- */
-  .ahoy + .banner h1,
-  .ahoy + .banner .banner__with {
+  .banner_details .banner__title,
+  .banner_details .banner__with {
     padding-left: 0;
   }
-  .ahoy + .banner h1,
-  .banner_next div:first-child h2 {
+  .banner_details .banner__title {
     background-image: none;
   }
