--- a/css/banner.css
+++ b/css/banner.css
@@ -53,17 +53,7 @@
   @media (min-width: 55em) {
     .banner__title-container,
     .banner__next-project-container {
-      left: calc(50vw - 17.9em);
-    }
-  }
-
-
-  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .banner__title-container > a,
-    .banner__next-project-container > a {
-      /* --wave-outline-light-blue */
-      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
-      background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYig4MCwgMTk1LCAyNTUpIiBkPSJNIC0xMCAwIFEgNTAgMjUsIDExMCAwIEwgMTEwIDEwIFEgNTAgMzUsIC0xMCAxMCI+PC9wYXRoPjwvc3ZnPg==');
+      left: calc(50vw - 17.2em);
     }
   }
 
@@ -132,8 +122,9 @@
     }
     .banner__next-project-container {
       top: 25%;
+      padding-left: 0;
     }
-    .banner_next .banner__title-container {
+    .banner__title-container_next {
       top: 25%;
       bottom: auto;
       left: 50%;
