--- a/css/home.css
+++ b/css/home.css
@@ -15,13 +15,13 @@
   .introduction h1 {
     font-size: inherit;
     line-height: inherit;
-    margin: 0 0 1.4em 0;
+    margin: 0;
   }
   .introduction h2 {
     font-size: 2em;
     line-height: 1;
-    margin-top: 0.5em;
-    margin-bottom: 1em;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
   }
   .introduction .action {
     float: right;
