Simplify HTML and CSS

--- a/css/home.css
+++ b/css/home.css
@@ -31,8 +31,8 @@
 
   /* =Projects
   ----------------------------------------------- */
-  .projects,
-  .projects > li {
+  .project-list,
+  .project-list > li {
     list-style: none;
     margin-left: 0;
     padding-left: 0;
