--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
   <link rel="stylesheet" href="/css/button.css" />
   <link rel="stylesheet" href="/css/nav.css" />
   <link rel="stylesheet" href="/css/layout.css" />
-  <link rel="stylesheet" href="/css/banner.css" />
-  <link rel="stylesheet" href="/css/banner-type.css" />
-  <link rel="stylesheet" href="/css/banner-credit.css" />
+  <link rel="stylesheet" href="/css/project-list-item.css" />
+  <link rel="stylesheet" href="/css/project-header.css" />
+  <link rel="stylesheet" href="/css/project-next.css" />
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/sky.css" />
 
