--- a/css/home.css
+++ b/css/home.css
@@ -32,7 +32,7 @@
   /* =Projects
   ----------------------------------------------- */
   .project-list,
-  .project-list > li {
+  .project-list li {
     list-style: none;
     margin-left: 0;
     padding-left: 0;
