--- a/css/layout.css
+++ b/css/layout.css
@@ -60,6 +60,10 @@
       width: 100vw;
       height: 100vw;
       overflow: hidden;
+      background: rgba(0, 0, 0, 0.1);
+    }
+    .night .container .screenshots figure {
+      background: rgba(255, 255, 255, 0.1);
     }
     .container .screenshots a {
       display: block;
