--- a/css/layout.css
+++ b/css/layout.css
@@ -67,6 +67,18 @@
     }
     .container .screenshots a {
       display: block;
+      position: relative;
+    }
+    .container .screenshots a::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.1);
+      background: linear-gradient(to top right, rgba(25, 25, 25, 0.1), rgba(25, 25, 25, 0.025));
     }
     .container .screenshots img {
       display: block;
