--- a/css/sky.css
+++ b/css/sky.css
@@ -141,6 +141,7 @@
     animation-delay: var(--sun-position);
     */
 
+    transition: top 0.2s, left 0.2s, margin-left 0.2s;
     top: 0.375em;
     left: 1.4em;
 
