Disable ship animation  in landscape mode

--- a/css/sky.css
+++ b/css/sky.css
@@ -18,11 +18,13 @@
     --ship-position: var(--device-gamma);
   }
 
+  /*
   @media (orientation: landscape) {
     :root {
       --ship-position: var(--device-beta);
     }
   }
+  */
 
 
 
