Add color to drop caps on case study pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,10 @@
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/sky.css" />
 
+  <script>
+  {% include space-time.js %}
+  </script>
+
   <!-- for Windows 8 -->
   <meta name="msapplication-TileImage" content="/images/ship.png" />
   <meta name="msapplication-TileColor" content="rgb(240, 240, 240)" />
