--- a/css/elements.css
+++ b/css/elements.css
@@ -26,6 +26,7 @@
     line-height: 1;
     font-variant: small-caps;
     text-transform: lowercase;
+    color: rgb(40, 155, 215);
   }
   p,
   ol,
