--- a/css/home.css
+++ b/css/home.css
@@ -47,6 +47,71 @@
     margin-left: 0;
     padding-left: 0;
   }
+  .services li {
+    margin-top: 4.2em;
+  }
+  .services img {
+    grid-row: 2/3;
+    display: block;
+    width: calc(0.7em * 6);
+    height: calc(0.7em * 6);
+    /* position: absolute;
+    transform: translateX(-100%);
+    margin-left: -0.5em; */
+    /* float: left; */
+    margin: 0;
+  }
+  .services h2 {
+    /* color: rgb(40, 155, 215); */
+    margin: 0;
+  }
+  .services p {
+    margin-top: 0;
+  }
+  /* .services a {
+    display: table;
+  } */
+  
+  @media (min-width: calc(33em + 3.5em + 3.5em)) {
+    .services li {
+      display: grid;
+      grid-template-columns: min-content auto;
+      grid-column-gap: 1.4em;
+      grid-row-gap: 0;
+      margin-right:  calc(0.7em * 16);
+      margin-top: 25vh;
+      margin-bottom: 25vh;
+    }
+    .services img {
+      grid-row: 1/3;
+    }
+    .services h2 {
+      grid-row: 1/2;
+      grid-column: 2/3;
+      margin: 0;
+    }
+    .services p {
+      margin: 0;
+      grid-column: 2/3;
+    }
+  
+    .services li:nth-child(2n) {
+      grid-template-columns: auto min-content;
+      text-align: right;
+      margin-right: 0;
+      margin-left: calc(0.7em * 16);
+    }
+    .services li:nth-child(2n) img {
+      grid-column: 2/3;
+    }
+    .services li:nth-child(2n) h2 {
+      grid-column: 1/2;
+    }
+    .services li:nth-child(2n) p {
+      grid-column: 1/2;
+    }
+  
+  }
 
 
   /* =Social
@@ -64,5 +129,12 @@
     display: inline-block;
     margin-right: 0.7em;
     margin-bottom: 0.7em;
+  }
+
+
+  /* =Credits
+  ----------------------------------------------- */
+  .credit {
+    font-size: 0.75em;
   }
 
