Tweak colors on home page

--- a/css/elements.css
+++ b/css/elements.css
@@ -26,7 +26,7 @@
     line-height: 1;
     font-variant: small-caps;
     text-transform: lowercase;
-    color: rgb(40, 155, 215);
+    /* color: rgb(40, 155, 215); */
   }
   p,
   ol,
