--- a/css/home.css
+++ b/css/home.css
@@ -16,6 +16,7 @@
     font-size: inherit;
     line-height: inherit;
     margin: 0;
+    color: inherit;
   }
   .introduction h2:first-of-type {
     font-size: 2em;
@@ -72,7 +73,15 @@
     display: table;
   } */
   
+  .home > #services h1,
+  .home > #hello    h1 {
+    color: rgb(40, 155, 215);
+  }
+  
   @media (min-width: calc(33em + 3.5em + 3.5em)) {
+    #services {
+      padding-top: 25vh;
+    }
     .services li {
       display: grid;
       grid-template-columns: min-content auto;
