--- a/css/home.css
+++ b/css/home.css
@@ -48,8 +48,12 @@
     margin-left: 0;
     padding-left: 0;
   }
+  /* .services {
+    margin-left:  calc(-50vw + calc(33em / 2) + 1.4em);
+    margin-right: calc(-50vw + calc(33em / 2) + 1.4em);
+  } */
   .services li {
-    margin-top: 4.2em;
+    margin-top: calc(0.7em * 4);
   }
   .services img {
     grid-row: 2/3;
@@ -80,17 +84,17 @@
   }
   
   @media (min-width: calc(33em + 3.5em + 3.5em)) {
-    /* #services {
-      padding-top: 25vh;
-    } */
+    #services {
+      padding-top: calc(0.7em * 4);
+    }
     .services li {
       display: grid;
       grid-template-columns: min-content auto;
       grid-column-gap: 1.4em;
       grid-row-gap: 0;
-      margin-right:  calc(0.7em * 16);
-      /* margin-top: 25vh;
-      margin-bottom: 25vh; */
+      margin-right: calc(0.7em * 8);
+      margin-top: calc(0.7em * 4);
+      margin-bottom: calc(0.7em * 4);
     }
     .services img {
       grid-row: 1/3;
@@ -109,7 +113,7 @@
       grid-template-columns: auto min-content;
       text-align: right;
       margin-right: 0;
-      margin-left: calc(0.7em * 16);
+      margin-left: calc(0.7em * 8);
     }
     .services li:nth-child(2n) img {
       grid-column: 2/3;
@@ -146,5 +150,6 @@
   ----------------------------------------------- */
   .credit {
     font-size: 0.75em;
+    text-align: right;
   }
 
