Update post “Improving UX for images while they’re loading on the web”

--- a/css/elements.css
+++ b/css/elements.css
@@ -58,3 +58,8 @@
   figcaption {
     font-size: 0.75em;
   }
+  pre {
+    margin: 2.8em 0;
+    background: hsl(0, 0%, 95%);
+    padding: 0.7em;
+  }
