--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,8 @@
   <link rel="stylesheet" href="/css/project-next.css" />
   <link rel="stylesheet" href="/css/home.css" />
   <link rel="stylesheet" href="/css/sky.css" />
+  <link rel="stylesheet" href="/css/highlight-code/jwarby-jekyll-pygments-themes/github.css" />
+  <link rel="stylesheet" href="/css/highlight-code/jwarby-jekyll-pygments-themes/native.css" media="(prefers-color-scheme: dark)" />
 
   <script>
   {% include space-time.js %}
