--- a/css/elements.css
+++ b/css/elements.css
@@ -62,6 +62,9 @@
     background: hsl(0, 0%, 95%);
     padding: 0.35em;
   }
+  .night code {
+    background: hsl(0, 0%, 5%);
+  }
   pre code {
     padding: 0.7em;
     margin: 2.8em 0;
